test/fixtures/route1-openshift4-neat.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: console
  name: console
  namespace: openshift-console
spec:
  host: console-openshift-console.apps-crc.testing
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    name: console
